--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     display: flex;
     flex-direction: column;
@@ -13,11 +14,18 @@ body {
     height: 80px;
     align-items: center;
     padding: 1rem;
+    width: 100%; 
+    padding: 0;
+}
+
+.logo {
+    margin-left: 5rem;
 }
 
 ul {
     display: flex;
     justify-content: space-around;
+    margin-right: 5rem;
 }
 
 li {
@@ -30,28 +38,60 @@ li {
     background-color: #1f2937;
     color: white;
     justify-content: space-between;
-    padding: 1rem;
+    width: 100%; 
+}
+
+.hero {
+    width: 50%;
+    margin: 5rem;
 }
 
 .img {
+    width: 50%;
     background-color: #818388;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 5rem;
 }
 
 .parttwo {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%; 
+    padding: 0;
+}
+
+.information {
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.illustration {
+    aspect-ratio: 1 / 1;
+    width: auto;
+    border: #3882f6;
+    border-width: 4px;
+    border-style: solid;
+    border-radius: 10px;
+    margin: 2rem;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .illustrations {
     display: flex;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    margin-bottom: 5rem;
 }
 
-.illustrations p {
-    padding: 1rem;
+.subtext {
+    padding: 2rem;
+    padding-top: 0;
+    margin: 0;
+    text-align: center;
 }
 
 .partthree {
@@ -60,17 +100,27 @@ li {
     padding: 2rem;
     font-size: 36px;
     color: #1f2937;
+    width: 100%; 
+    background-color: #e5e7eb;
 }
 
 .quote {
     font-style: italic;
     font-weight: 400;
+    padding-left: 10rem;
+    padding-top: 10rem;
+    padding-right: 10rem;
+    margin-bottom: 0;
 }
 
 
 .thor {
     display: flex;
     justify-content: end;
+    padding-left: 10rem;
+    padding-bottom: 10rem;
+    padding-right: 10rem;
+    margin-top: 0;
 }
 
 .partfour {
@@ -79,6 +129,15 @@ li {
     justify-content: center;
     background-color: #3882f6;
     width: 50rem;
+    margin: 2rem;
+}
+
+.partfour p {
+    margin: 2rem;
+}
+
+.partfour button {
+    margin: 2rem;
 }
 
 .footer {
@@ -86,4 +145,6 @@ li {
     justify-content: center;
     background-color: #1f2937;
     color: white;
+    width: 100%; 
+    padding: 0;
 }
