--- a/style.css
+++ b/style.css
@@ -46,6 +46,17 @@ li {
     margin: 5rem;
 }
 
+.hero button {
+    background-color: #3882f6;
+    border-radius: 10px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border: none;
+    height: 25px;
+    color: white;
+    margin-top: 1rem;
+}
+
 .img {
     width: 50%;
     background-color: #818388;
@@ -53,6 +64,7 @@ li {
     justify-content: center;
     align-items: center;
     margin: 5rem;
+    max-height: fit-content;
 }
 
 .parttwo {
@@ -97,7 +109,7 @@ li {
 .partthree {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding: 0;
     font-size: 36px;
     color: #1f2937;
     width: 100%; 
@@ -130,14 +142,24 @@ li {
     background-color: #3882f6;
     width: 50rem;
     margin: 2rem;
+    align-items: center;
+    border-radius: 7px;
 }
 
 .partfour p {
     margin: 2rem;
+    color: white;
 }
 
 .partfour button {
     margin: 2rem;
+    background-color: #3882f6;
+    border-radius: 10px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-color: white;
+    height: 2rem;
+    color: white;
 }
 
 .footer {
