--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ body {
     margin-left: 5rem;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 ul {
     display: flex;
     justify-content: space-around;
