--- a/style.css
+++ b/style.css
@@ -91,10 +91,12 @@ li {
     border: #3882f6;
     border-width: 4px;
     border-style: solid;
-    border-radius: 10px;
+    border-radius: 15px;
     margin: 2rem;
     margin-bottom: 10px;
     margin-top: 10px;
+    max-width: 20vw;
+    max-height: 20vh;
 }
 
 .illustrations {
@@ -102,6 +104,9 @@ li {
     margin-left: 5rem;
     margin-right: 5rem;
     margin-bottom: 5rem;
+    padding-left: 20vw;
+    padding-right: 20vw;
+    flex: 0;
 }
 
 .subtext {
